add upload of images and connect to s3clone